--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
     "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4"
   },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
